# contest

./: AUTHORS  AUTHORS.txt  CMakeLists.txt  ChangeLog  buildBin.sh  contest.spec
ConTest/: CMakeLists.txt  ConTest.cpp
R/: ConTestFunctions.R  computePValues.R
debian/: changelog  contest.manpages  control  copyright  rules
man/: CMakeLists.txt  contest.1.txt
